Updated project with the correct package alias

--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -28,6 +28,6 @@
     "sfdcLoginUrl": "https://login.salesforce.com",
     "sourceApiVersion": "44.0",
     "packageAliases": {
-        "force-di": "0Ho0o0000008ORqCAM"
+        "force-di": "0Ho1P000000000GSAQ"
     }
 }
