--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -1,33 +1,39 @@
 {
-    "packageDirectories": [
+  "packageDirectories": [
+    {
+      "path": "force-di",
+      "default": true,
+      "package": "force-di",
+      "versionName": "ver 0.1",
+      "versionNumber": "0.1.0.NEXT",
+      "dependencies": [
         {
-            "path": "force-di",
-            "default": true,
-            "package": "force-di",
-            "versionName": "ver 0.1",
-            "versionNumber": "0.1.0.NEXT"
-        },
-        {
-            "path": "force-di-trigger-demo",
-            "default": false
-        },
-        {
-            "path": "force-app-1",
-            "default": false
-        },
-        {
-            "path": "force-app-2",
-            "default": false
-        },
-        {
-            "path": "force-app-3",
-            "default": false
+          "package": "flowmagic"
         }
-    ],
-    "namespace": "",
-    "sfdcLoginUrl": "https://login.salesforce.com",
-    "sourceApiVersion": "44.0",
-    "packageAliases": {
-        "force-di": "0Ho1P000000000GSAQ"
+      ]
+    },
+    {
+      "path": "force-di-trigger-demo",
+      "default": false
+    },
+    {
+      "path": "force-app-1",
+      "default": false
+    },
+    {
+      "path": "force-app-2",
+      "default": false
+    },
+    {
+      "path": "force-app-3",
+      "default": false
     }
+  ],
+  "namespace": "",
+  "sfdcLoginUrl": "https://login.salesforce.com",
+  "sourceApiVersion": "44.0",
+  "packageAliases": {
+    "force-di": "0Ho1P000000000GSAQ",
+    "flowmagic": "04t6F000001D6LOQA0"
+  }
 }
