--- a/config/project-scratch-def.json
+++ b/config/project-scratch-def.json
@@ -1,7 +1,4 @@
 {
     "orgName": "force-di",
-    "edition": "Developer",
-    "orgPreferences" : {
-        "enabled": ["S1DesktopEnabled"]
-    }
+    "edition": "Developer"
 }
